--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,7 @@
   "tabWidth": 4,
   "singleQuote": false,
   "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "bracketSameLine": true,
+  "bracketSpacing": true
 }
