--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-flip-countdown": "^0.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
